// Vitest Snapshot v1

exports[`basic > -1+2*6/3+5 1`] = `
{
  "left": {
    "left": {
      "operator": "-",
      "right": {
        "type": "value",
        "value": "1",
      },
      "type": "unary",
    },
    "operator": "+",
    "right": {
      "left": {
        "left": {
          "type": "value",
          "value": "2",
        },
        "operator": "*",
        "right": {
          "type": "value",
          "value": "6",
        },
        "type": "binary",
      },
      "operator": "/",
      "right": {
        "type": "value",
        "value": "3",
      },
      "type": "binary",
    },
    "type": "binary",
  },
  "operator": "+",
  "right": {
    "type": "value",
    "value": "5",
  },
  "type": "binary",
}
`;

exports[`basic > 1 + 2^3^4*5-6 1`] = `
{
  "left": {
    "left": {
      "type": "value",
      "value": "1",
    },
    "operator": "+",
    "right": {
      "left": {
        "left": {
          "type": "value",
          "value": "2",
        },
        "operator": "^",
        "right": {
          "left": {
            "type": "value",
            "value": "3",
          },
          "operator": "^",
          "right": {
            "type": "value",
            "value": "4",
          },
          "type": "binary",
        },
        "type": "binary",
      },
      "operator": "*",
      "right": {
        "type": "value",
        "value": "5",
      },
      "type": "binary",
    },
    "type": "binary",
  },
  "operator": "-",
  "right": {
    "type": "value",
    "value": "6",
  },
  "type": "binary",
}
`;

exports[`conditional operation > 1+ 2  *3 ? 1+1 : 2  -1 1`] = `
{
  "condition": {
    "left": {
      "type": "value",
      "value": "1",
    },
    "operator": "+",
    "right": {
      "left": {
        "type": "value",
        "value": "2",
      },
      "operator": "*",
      "right": {
        "type": "value",
        "value": "3",
      },
      "type": "binary",
    },
    "type": "binary",
  },
  "falseBranch": {
    "left": {
      "type": "value",
      "value": "2",
    },
    "operator": "-",
    "right": {
      "type": "value",
      "value": "1",
    },
    "type": "binary",
  },
  "trueBranch": {
    "left": {
      "type": "value",
      "value": "1",
    },
    "operator": "+",
    "right": {
      "type": "value",
      "value": "1",
    },
    "type": "binary",
  },
  "type": "conditional",
}
`;

exports[`conditional operation > conditional chains 1`] = `
{
  "condition": {
    "type": "value",
    "value": "condition1",
  },
  "falseBranch": {
    "condition": {
      "type": "value",
      "value": "condition2",
    },
    "falseBranch": {
      "condition": {
        "type": "value",
        "value": "condition3",
      },
      "falseBranch": {
        "type": "value",
        "value": "value4",
      },
      "trueBranch": {
        "type": "value",
        "value": "value3",
      },
      "type": "conditional",
    },
    "trueBranch": {
      "type": "value",
      "value": "value2",
    },
    "type": "conditional",
  },
  "trueBranch": {
    "type": "value",
    "value": "value1",
  },
  "type": "conditional",
}
`;

exports[`conditional operation > conditional chains 2`] = `
{
  "condition": {
    "type": "value",
    "value": "condition1",
  },
  "falseBranch": {
    "condition": {
      "type": "value",
      "value": "condition3",
    },
    "falseBranch": {
      "condition": {
        "type": "value",
        "value": "condition5",
      },
      "falseBranch": {
        "type": "value",
        "value": "false5",
      },
      "trueBranch": {
        "type": "value",
        "value": "true5",
      },
      "type": "conditional",
    },
    "trueBranch": {
      "condition": {
        "type": "value",
        "value": "condition4",
      },
      "falseBranch": {
        "type": "value",
        "value": "false4",
      },
      "trueBranch": {
        "type": "value",
        "value": "true4",
      },
      "type": "conditional",
    },
    "type": "conditional",
  },
  "trueBranch": {
    "condition": {
      "type": "value",
      "value": "condition2",
    },
    "falseBranch": {
      "type": "value",
      "value": "false2",
    },
    "trueBranch": {
      "type": "value",
      "value": "true2",
    },
    "type": "conditional",
  },
  "type": "conditional",
}
`;

exports[`conditional operation > true ? 1 : 2 1`] = `
{
  "condition": {
    "type": "value",
    "value": "true",
  },
  "falseBranch": {
    "type": "value",
    "value": "2",
  },
  "trueBranch": {
    "type": "value",
    "value": "1",
  },
  "type": "conditional",
}
`;

exports[`error handling > 1 2 1`] = `
{
  "type": "value",
  "value": "1",
}
`;

exports[`parenthesis > ((1))+1 1`] = `
{
  "left": {
    "type": "value",
    "value": "1",
  },
  "operator": "+",
  "right": {
    "type": "value",
    "value": "1",
  },
  "type": "binary",
}
`;

exports[`parenthesis > 2*(3-1) 1`] = `
{
  "left": {
    "type": "value",
    "value": "2",
  },
  "operator": "*",
  "right": {
    "left": {
      "type": "value",
      "value": "3",
    },
    "operator": "-",
    "right": {
      "type": "value",
      "value": "1",
    },
    "type": "binary",
  },
  "type": "binary",
}
`;

exports[`parenthesis > 2*(9*(((2))+1))-1 1`] = `
{
  "left": {
    "left": {
      "type": "value",
      "value": "2",
    },
    "operator": "*",
    "right": {
      "left": {
        "type": "value",
        "value": "9",
      },
      "operator": "*",
      "right": {
        "left": {
          "type": "value",
          "value": "2",
        },
        "operator": "+",
        "right": {
          "type": "value",
          "value": "1",
        },
        "type": "binary",
      },
      "type": "binary",
    },
    "type": "binary",
  },
  "operator": "-",
  "right": {
    "type": "value",
    "value": "1",
  },
  "type": "binary",
}
`;
